--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url('indir.jpeg');
+            background-image: url('bau-khong-khi-tinh-khoi-khe-goi-nho-su-nhe-nhom-trong-long.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
