--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            color: #f7f7f7;
+            text-shadow: 0 2px 6px rgba(0, 0, 0, 0.7);
         }
 
         /* Hamburger Menü */
@@ -29,23 +31,25 @@
             top: 20px;
             left: 20px;
             z-index: 1000;
-            background: rgba(255, 255, 255, 0.9);
-            border: none;
+            background: transparent;
+            border: 1px solid rgba(255, 255, 255, 0.5);
             padding: 10px 15px;
             cursor: pointer;
             border-radius: 5px;
             transition: all 0.3s ease;
+            backdrop-filter: blur(2px);
         }
 
         .hamburger:hover {
-            background: rgba(255, 255, 255, 1);
+            border-color: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.1);
         }
 
         .hamburger span {
             display: block;
             width: 25px;
             height: 3px;
-            background-color: #333;
+            background-color: #f7f7f7;
             margin: 5px 0;
             transition: 0.3s;
             border-radius: 2px;
@@ -101,20 +105,22 @@
             position: fixed;
             top: 20px;
             right: 20px;
-            background: rgba(255, 255, 255, 0.9);
-            color: #333;
+            background: transparent;
+            color: #f7f7f7;
             padding: 12px 20px;
-            border: none;
+            border: 1px solid rgba(255, 255, 255, 0.5);
             border-radius: 5px;
             cursor: pointer;
             font-weight: bold;
             transition: all 0.3s ease;
             z-index: 100;
             text-decoration: none;
+            backdrop-filter: blur(2px);
         }
 
         .about-btn:hover {
-            background: rgba(255, 255, 255, 1);
+            border-color: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.1);
             transform: translateY(-2px);
         }
 
@@ -137,22 +143,21 @@
         /* Ana İçerik */
         .container {
             text-align: center;
-            background: rgba(255, 255, 255, 0.95);
+            background: transparent;
             padding: 60px 40px;
             border-radius: 20px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
             max-width: 500px;
             width: 90%;
         }
 
         h1 {
-            color: #333;
+            color: #f7f7f7;
             font-size: 32px;
             margin-bottom: 20px;
         }
 
         p {
-            color: #666;
+            color: #f7f7f7;
             font-size: 16px;
             margin-bottom: 30px;
             line-height: 1.6;
@@ -201,7 +206,7 @@
         }
 
         .modal-content {
-            background: white;
+            background: rgba(0, 0, 0, 0.25);
             padding: 40px;
             border-radius: 15px;
             max-width: 600px;
@@ -209,6 +214,8 @@
             position: relative;
             max-height: 80vh;
             overflow-y: auto;
+            backdrop-filter: blur(6px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         .close-modal {
@@ -220,20 +227,20 @@
             cursor: pointer;
             background: none;
             border: none;
-            color: #999;
+            color: #f7f7f7;
         }
 
         .close-modal:hover {
-            color: #333;
+            color: #fff;
         }
 
         .modal h2 {
-            color: #333;
+            color: #f7f7f7;
             margin-bottom: 20px;
         }
 
         .modal p {
-            color: #666;
+            color: #f7f7f7;
             text-align: left;
         }
 
