--- a/index.html
+++ b/index.html
@@ -328,9 +328,15 @@
 
     <!-- Sosyal Medya Footer -->
     <div class="social-footer">
-        <a href="https://instagram.com" class="social-icon" title="Instagram" target="_blank">📷</a>
-        <a href="https://youtube.com" class="social-icon" title="YouTube" target="_blank">▶️</a>
-        <a href="https://discord.com" class="social-icon" title="Discord" target="_blank">💬</a>
+        <a href="https://www.instagram.com/doneraioriginal?igsh=dml6bmF6dW12dDU0" class="social-icon" title="Instagram" target="_blank">
+            <img src="resimler (6).jpeg" alt="Instagram" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+        </a>
+        <a href="https://discord.gg/5kjDxwzn5" class="social-icon" title="Discord" target="_blank">
+            <img src="discord" alt="Discord" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+        </a>
+        <a href="https://youtube.com/@zenixeditsyt?si=Su8UD-ymZxmIPJcC" class="social-icon" title="YouTube" target="_blank">
+            <img src="png-clipart-youtube-play-button-computer-icons-youtube-youtube-logo-angle-rectangle-thumbnail.png" alt="YouTube" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+        </a>
     </div>
 
     <!-- Ana İçerik -->
