--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
-<<<<<<< ours
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anılarımız</title>
-=======
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="DoneRAI - Your AI-powered solution">
-    <title>DoneRAI</title>
->>>>>>> theirs
     <style>
         * {
             margin: 0;
@@ -21,7 +12,6 @@
         }
 
         body {
-<<<<<<< ours
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-image: url('bau-khong-khi-tinh-khoi-khe-goi-nho-su-nhe-nhom-trong-long.jpg');
             background-size: cover;
@@ -278,6 +268,14 @@
             text-decoration: none;
             transition: all 0.3s ease;
             backdrop-filter: blur(2px);
+            overflow: hidden;
+        }
+
+        .social-icon img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
         }
 
         .social-icon:hover {
@@ -300,63 +298,15 @@
                 font-size: 16px;
             }
 
-            .social-footer {
-                bottom: 15px;
-                left: 15px;
-                gap: 12px;
-            }
-
             .social-icon {
                 width: 40px;
                 height: 40px;
                 font-size: 18px;
             }
-=======
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .container {
-            text-align: center;
-            padding: 2rem;
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 10px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            margin: 1rem;
-        }
-
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-
-        p {
-            font-size: 1.2rem;
-            color: #666;
-            margin-bottom: 2rem;
-        }
-
-        .footer {
-            margin-top: 2rem;
-            font-size: 0.9rem;
-            color: #999;
->>>>>>> theirs
         }
     </style>
 </head>
 <body>
-<<<<<<< ours
     <!-- Hamburger Menü Butonu -->
     <button class="hamburger" id="hamburger">
         <span></span>
@@ -381,13 +331,13 @@
     <!-- Sosyal Medya Footer -->
     <div class="social-footer">
         <a href="https://www.instagram.com/doneraioriginal?igsh=dml6bmF6dW12dDU0" class="social-icon" title="Instagram" target="_blank">
-            <img src="resimler (6).jpeg" alt="Instagram" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+            <img src="images (6).jpeg" alt="Instagram">
         </a>
         <a href="https://discord.gg/5kjDxwzn5" class="social-icon" title="Discord" target="_blank">
-            <img src="discord" alt="Discord" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+            <img src="images (4).png" alt="Discord">
         </a>
         <a href="https://youtube.com/@zenixeditsyt?si=Su8UD-ymZxmIPJcC" class="social-icon" title="YouTube" target="_blank">
-            <img src="png-clipart-youtube-play-button-computer-icons-youtube-youtube-logo-angle-rectangle-thumbnail.png" alt="YouTube" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+            <img src="png-clipart-youtube-play-button-computer-icons-youtube-youtube-logo-angle-rectangle-thumbnail.png" alt="YouTube">
         </a>
     </div>
 
@@ -443,13 +393,15 @@
         const memoriesModal = document.getElementById('memoriesModal');
         const closeModal = document.getElementById('closeModal');
 
-        memoriesBtn.addEventListener('click', () => {
-            memoriesModal.classList.add('active');
-        });
+        if (memoriesBtn && memoriesModal && closeModal) {
+            memoriesBtn.addEventListener('click', () => {
+                memoriesModal.classList.add('active');
+            });
 
-        closeModal.addEventListener('click', () => {
-            memoriesModal.classList.remove('active');
-        });
+            closeModal.addEventListener('click', () => {
+                memoriesModal.classList.remove('active');
+            });
+        }
 
         // Hakkımızda Modal
         const aboutBtn = document.getElementById('aboutBtn');
@@ -484,14 +436,5 @@
             });
         });
     </script>
-=======
-    <div class="container">
-        <h1>DoneRAI</h1>
-        <p>Welcome to DoneRAI</p>
-        <div class="footer">
-            <p>&copy; 2025 DoneRAI. All rights reserved.</p>
-        </div>
-    </div>
->>>>>>> theirs
 </body>
 </html>
