--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Döner AI</title>
-    <link rel="icon" type="image/jpeg" href="Screenshot_20260123_181143_Gallery.jpg">
+    <link rel="icon" type="image/webp" href="IMG_20260120_134136_893.webp">
     <style>
         * {
             margin: 0;
@@ -344,7 +344,7 @@
 
     <!-- Ana İçerik -->
     <div class="container">
-        <h1 style="font-size: 48px; margin-bottom: 10px;"><img src="Screenshot_20260123_181143_Gallery.jpg" alt="Döner AI" style="width: 60px; height: 60px; object-fit: contain;"> Döner AI</h1>
+        <h1 style="font-size: 48px; margin-bottom: 10px; display: flex; align-items: center; justify-content: center; gap: 15px;"><img src="IMG_20260120_134136_893.webp" alt="Döner AI" style="width: 100px; height: 100px; object-fit: contain; margin-left: -20px;"> Döner AI</h1>
         <p style="font-size: 20px; color: #ff6b6b; margin-bottom: 15px; font-weight: bold;">Sizlerle Döner AI Sunar...</p>
         <p style="font-size: 14px; margin-bottom: 10px; opacity: 0.9;">⏳ Çok Yakında</p>
         <p style="font-size: 14px; margin-bottom: 20px; color: #ff0000; font-weight: bold;">🔒 Kapalı</p>
