--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         /* Ana İçerik */
         .container {
             text-align: center;
-            background: linear-gradient(135deg, rgba(34, 197, 94, 0.15) 0%, rgba(14, 165, 233, 0.15) 50%, rgba(168, 85, 247, 0.15) 100%);
+            background: rgba(26, 58, 82, 0.75);
             padding: 60px 40px;
             border-radius: 20px;
             max-width: 500px;
