--- a/index.html
+++ b/index.html
@@ -344,7 +344,10 @@
         <h1 style="font-size: 48px; margin-bottom: 10px; display: flex; align-items: center; justify-content: center; gap: 15px;"><img src="IMG_20260120_134136_893.webp" alt="Döner AI" style="width: 100px; height: 100px; object-fit: contain; margin-left: -20px;"> Döner AI</h1>
         <p style="font-size: 20px; color: #ff6b6b; margin-bottom: 15px; font-weight: bold;">Sizlerle Döner AI Sunar...</p>
         <p style="font-size: 14px; margin-bottom: 10px; opacity: 0.9;">⏳ Çok Yakında</p>
-        <p style="font-size: 14px; margin-bottom: 20px; color: #ff0000; font-weight: bold;">🔒 Kapalı</p>
+        <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 20px;">
+            <span style="width: 10px; height: 10px; background-color: #ff0000; border-radius: 50%;"></span>
+            <p style="font-size: 16px; color: #ff0000; font-weight: bold; background-color: rgba(255, 0, 0, 0.1); border: 2px solid #ff0000; border-radius: 8px; padding: 8px 20px; margin: 0;">KAPALI</p>
+        </div>
         <p style="font-size: 14px; line-height: 1.8; max-width: 400px; margin: 0 auto;">1 Ocak 2026'da geliştirilmeye başlandı. Size en iyi ve yakın verimi sunmak için çaba gösteriyoruz. Çok yakında Döner AI, tüm dünyada hizmet verecek.</p>
 
         <!-- Sosyal Medya Footer -->
