--- a/about.html
+++ b/about.html
@@ -252,13 +252,13 @@
         <!-- Sosyal Medya Footer -->
         <div class="social-footer">
             <a href="https://www.instagram.com/doneraioriginal?igsh=dml6bmF6dW12dDU0" class="social-icon" title="Instagram" target="_blank">
-                <img src="images (6).jpeg" alt="Instagram">
+                <img src="20260126150450.png" alt="Instagram">
             </a>
             <a href="https://discord.gg/5kjDxwzn5" class="social-icon" title="Discord" target="_blank">
-                <img src="images (4).png" alt="Discord">
+                <img src="20260126150403.png" alt="Discord">
             </a>
             <a href="https://youtube.com/@zenixeditsyt?si=Su8UD-ymZxmIPJcC" class="social-icon" title="YouTube" target="_blank">
-                <img src="png-clipart-youtube-play-button-computer-icons-youtube-youtube-logo-angle-rectangle-thumbnail.png" alt="YouTube">
+                <img src="20260126150432.png" alt="YouTube">
             </a>
         </div>
     </div>
