--- a/index.html
+++ b/index.html
@@ -200,42 +200,34 @@
 
         /* Footer Sosyal Medya */
         .social-footer {
-            position: absolute;
-            bottom: 15px;
-            left: 20px;
             display: flex;
-            gap: 15px;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 40px;
             z-index: 500;
         }
 
         .social-icon {
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: transparent;
-            border: 1.5px solid rgba(255, 255, 255, 0.5);
-            color: #f7f7f7;
-            font-size: 22px;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            backdrop-filter: blur(2px);
-            overflow: hidden;
-        }
-
-        .social-icon img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            width: 60px;
+            height: 60px;
             border-radius: 50%;
+            background: rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
+            text-decoration: none;
         }
 
         .social-icon:hover {
-            border-color: rgba(255, 255, 255, 0.9);
-            background: rgba(255, 255, 255, 0.1);
-            transform: translateY(-3px);
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateY(-5px);
+        }
+
+        .social-icon img {
+            width: 35px;
+            height: 35px;
+            object-fit: contain;
         }
 
         @media (max-width: 768px) {
@@ -316,7 +308,7 @@
             </div>
         </div>
         
-        <p style="font-size: 14px; line-height: 1.8; max-width: 400px; margin: 0 auto;">1 Ocak 2026'da geliştirilmeye başlandı. Size en iyi ve yakın verimi sunmak için çaba gösteriyoruz. Çok yakında Döner AI, tüm dünyada hizmet verecek.</p>
+        <p style="font-size: 14px; line-height: 1.8; max-width: 400px; margin: 0 auto; margin-bottom: 30px;">1 Ocak 2026'da geliştirilmeye başlandı. Size en iyi ve yakın verimi sunmak için çaba gösteriyoruz. Çok yakında Döner AI, tüm dünyada hizmet verecek.</p>
 
         <!-- Sosyal Medya Footer -->
         <div class="social-footer">
