--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         .container {
             text-align: center;
             background: rgba(26, 58, 82, 0.75);
-            padding: 60px 40px;
+            padding: 40px 40px 30px 40px;
             border-radius: 20px;
             max-width: 500px;
             width: 90%;
@@ -154,7 +154,6 @@
             border: 1px solid rgba(255, 255, 255, 0.2);
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
             position: relative;
-            padding-bottom: 100px;
         }
 
         h1 {
