--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
             justify-content: center;
             color: #f7f7f7;
             padding: 20px;
+            overflow: hidden;
         }
 
         /* Hamburger Menü */
