--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             justify-content: center;
             color: #f7f7f7;
             text-shadow: 0 2px 6px rgba(0, 0, 0, 0.7);
+            overflow: hidden;
         }
 
         /* Hamburger Menü */
